chore: add repositories and create actions in controllers

--- a/src/ApplicationScreening.Api/ApplicationScreening.Api.csproj
+++ b/src/ApplicationScreening.Api/ApplicationScreening.Api.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ApplicationScreening.Domain\ApplicationScreening.Domain.csproj" />
+    <ProjectReference Include="..\ApplicationScreening.Infrastructure\ApplicationScreening.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
